--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="/assets/css/global.css">
+  <link rel="stylesheet" href="/assets/css/pokedex.css">
 
   <title>Pokedex</title>
 </head>
 
 <body>
-  <h1>Olá mundo!</h1>
+  <section class="content">
+    <h1>Pokedex</h1>
+
+    <ol class="pokemons">
+      <li class="pokemon">
+        <span class="number">#001</span>
+        <span class="name">Bulbasaur</span>
+        <div class="detail">
+          <ol class="types">
+            <li class="type">grass</li>
+            <li class="type">poison</li>
+          </ol>
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+            alt="">
+        </div>
+      </li>
+    </ol>
+  </section>
   <script src="/assets/js/main.js"></script>
 </body>
 
