--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <ol id="pokemonList" class="pokemons">
 
     </ol>
+
+    <div class="pagination">
+      <button id="loadMore" type="button">
+        Load more...
+      </button>
+    </div>
   </section>
   <script src="/assets/js/pokemon-model.js"></script>
   <script src="/assets/js/poke-api.js"></script>
